--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+.main{
+    margin-left: 360px;
+    color: rgb(40, 40, 40);
+    font-size: 24px;
+   
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.page{
+    background-color: rgb(255, 255, 255);
+    padding-top: 8px ;
+    min-width: fit-content;
+    height: fit-content;
+    color: white;
+    padding-right: 42px;
+    margin-bottom: 52px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.top-photo-url{
+    position: absolute;
+    left: auto;
+    right: 52px;
+    top: 52px;
+    width: 48px;
+    border-radius: 50%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media screen and (max-width: 830px) {
+    .top-photo-url{
+        display: none;
+    }
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (max-width: 768px) {
+    .main{
+        margin-left: 56px;
+    }
+    .page{
+        width: fit-content;
+        padding: 0;
+        margin-right: 0;
+        padding-right: 0;
+    }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (max-width: 375px) {
+    .main{
+        margin-left: 56px;
+        zoom: 80%;
+        margin-left: 66px;
+        min-width: none;
+        max-width: fit-content;
+    }
+    .page{
+        width: fit-content;
+        padding: 0;
+        width: 95%;
+        overflow-x: hidden;
+    }
 }
+
